bug render mau den

--- a/OpenGL/OpenGL/OpenGL.vcxproj
+++ b/OpenGL/OpenGL/OpenGL.vcxproj
@@ -175,8 +175,11 @@
     <Image Include="container.jpg" />
     <Image Include="container2.png" />
     <Image Include="container2_specular.png" />
+    <Image Include="marble.jpg" />
+    <Image Include="metal.png" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="assimp-vc143-mtd.dll" />
     <None Include="backpack\backpack.mtl" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
