--- a/OpenGL/OpenGL/OpenGL.vcxproj.filters
+++ b/OpenGL/OpenGL/OpenGL.vcxproj.filters
@@ -73,8 +73,15 @@
     <Image Include="backpack\specular.jpg">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="marble.jpg">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="metal.png">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
   <ItemGroup>
     <None Include="backpack\backpack.mtl" />
+    <None Include="assimp-vc143-mtd.dll" />
   </ItemGroup>
 </Project>
